(lang dune 3.20)

(name gwt)

(generate_opam_files true)

(source
 (github furon-kuina/gwt))

(authors "furon-kuina")

(maintainers "furon-kuina")

(license MIT License)

(package
 (name gwt)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))
